Add live hydra root

--- a/www/templates/how-it-works.html
+++ b/www/templates/how-it-works.html
@@ -2,7 +2,26 @@
 
 {% block body %}
 
-  <h1>TBD</h1>
+<h1>Network Control Center</h1>
 
-  
+<br/></br/>
+
+<h4>Node bootstrapping procedures</h4>
+
+<ul>
+    <li>
+        <p><b>Trusted keys for bootstrapping</b></p>
+        
+        <a href="/assets/hydra-root.ndncert">Hydra root key</a><br/>
+        <a href="/assets/hydra-root.ndncert.txt">Root key description</a>
+    </li>
+
+
+    <li>
+        <p><b>NDNCERT client configuration for bootstrapping</b></p>
+
+        <a href="/assets/hydra-ndncert.conf">NDNCERT client config</a>
+    </li>
+</ul>
+
 {% endblock %}
